--- a/index.html
+++ b/index.html
@@ -1,27 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gamer</title>
+    <link rel="stylesheet" href="styles/gamer-style.css">
+    <link rel="stylesheet" href="styles/media.css">
 </head>
+
 <body>
-      <header>
-        <nav class="nav-container">
-          <div class="logo-container">
-
-          </div>
-          <div>
-
-          </div>
+    <header>
+        <nav>
+            <div class="nav-container">
+                <div class="logo-container">
+                    <img src="images/Frame.png" alt="">
+                    <h2><span class="span">G</span>amer</h2>
+                </div>
+                <div class="nav-items-container">
+                    <a href="">About Us</a>
+                    <a href="">Developers</a>
+                </div>
+                <div class="nav-items-container-2">
+                    <a href="">Follow Us On</a>
+                    <img src="images/icons8-youtube-48.png" alt="">
+                    <img src="images/icons8-tiktok-48.png" alt="">
+                </div>
+            </div>
         </nav>
-      </header>
-    
-    <main>
+    </header>
 
+    <main>
+        <section class="section">
+            <div class="text-style">
+                <h3>Play Like The</h3>
+                <h2>G.O.A.T.</h2>
+                <div class="nav-items-container">
+                    <img src="images/oo.png" alt="">
+                    <a href="">1-Click instant play</a>
+                    <img src="images/Frame (1).png" alt="">
+                    <a href="">No Download</a>
+                    <img src="images/Frame (2).png" alt="">
+                    <a href="">1000s of supported online games</a>
+                </div >
+                <div class="btn">
+                    <button class="btn-1">Sign In</button>
+                    <button class="btn-2">Go Rogue</button>
+                </div>
+              
+            </div>
+            <div class="image-style">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </section>
+        <section class="section">
+
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
