--- a/index.html
+++ b/index.html
@@ -33,15 +33,22 @@
     <main>
         <section class="section">
             <div class="text-style">
-                <h3>Play Like The</h3>
-                <h2>G.O.A.T.</h2>
-                <div class="nav-items-container">
-                    <img src="images/oo.png" alt="">
-                    <a href="">1-Click instant play</a>
-                    <img src="images/Frame (1).png" alt="">
-                    <a href="">No Download</a>
-                    <img src="images/Frame (2).png" alt="">
-                    <a href="">1000s of supported online games</a>
+                <h3 class="heading-3">PLAY LIKE THE</h3>
+                <h2 class="heading-2">G.O.A.T.</h2>
+                <div class="main-container">
+                   <ul>
+                    <li><img src="images/oo.png" alt="">
+                         <a href="">1-Click instant play</a>
+                    </li>
+                    <li>
+                        <img src="images/Frame (1).png" alt=""> 
+                        <a href="">No Download</a>
+                    </li>
+                    <li>
+                        <img src="images/Frame (2).png" alt="">
+                        <a href="">1000s of supported online games</a>
+                    </li>
+                   </ul>
                 </div >
                 <div class="btn">
                     <button class="btn-1">Sign In</button>
@@ -49,8 +56,8 @@
                 </div>
               
             </div>
-            <div class="image-style">
-                <img src="images/Group 18.png" alt="">
+            <div >
+                <img class="image-style" src="images/Group 18.png" alt="">
             </div>
         </section>
         <section class="section">
