--- a/index.html
+++ b/index.html
@@ -60,12 +60,99 @@
                 <img class="image-style" src="images/Group 18.png" alt="">
             </div>
         </section>
-        <section class="section">
-
+        <section class="section-2">
+              <div class="game-text">
+                    <h2 class="all-heading">Online Games <span class="span-2">Funny Videos</span> </h2>
+                    <p class="paragraph">A Collection of Hilarious Videos to Brighten Your Day</p>
+              </div>
+              <div class="game-image">
+                   <div class="oo">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                   </div>
+                 <div class="oo">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                 </div>
+                 <div class="oo">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <p>Breaking game records like OG</p>
+                 </div>
+                 <div class="oo">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                 </div>
+              </div>
+        </section>
+        <section class="section-3">
+            <div class="online-game-div">
+                 <h2 class="heading-1"><span class="span-2">Play Instantly,</span>
+                    No Downloads
+                    No Installs.</h2>
+                 <p class="paragraph-2">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div>
+                <img class="image-1" src="images/Rectangle 55.png" alt="">
+                <img class="image-2" src="images/Rectangle 66.png" alt="">
+            </div>
+        </section>
+        <section class="section-4">
+           <div class="img-btn-2">
+            <div class="img-btn">
+                <img src="images/Rectangle 11.png" alt="">
+                <button class="btn-3"> Action Games</button>
+            </div>
+             <div class="img-btn">
+                <img src="images/Rectangle 12.png" alt="">
+                <button class="btn-3"> Adventure Games</button>
+             </div>
+            
+             <div class="img-btn">
+                <img src="images/Rectangle 13.png" alt="">
+                <button class="btn-3"> Arcade Games</button>
+             </div>
+             <div class="img-btn">
+                <img src="images/Rectangle 14.png" alt="">
+                <button class="btn-3"> Educational Games</button>
+             </div>
+             <div class="img-btn">
+                <img src="images/Rectangle 15.png" alt="">
+                <button class="btn-3"> Word Games</button>
+             </div>
+           </div>
+             <div class="img-btn">
+                <img src="images/Rectangle 16.png" alt="">
+                <button class="btn-3">Role Palying Games</button>
+             </div>
+             <div class="img-btn">
+                <img src="images/Rectangle 17.png" alt="">
+                <button class="btn-3"> Music & Audio Games</button>
+             </div>
+             <div class="img-btn">
+                <img src="images/Rectangle 18.png" alt="">
+                <button class="btn-3"> Puzzle Games</button>
+             </div>
+            <div class="img-btn">
+                <img src="images/Rectangle 19.png" alt="">
+                <button class="btn-3"> Strategy Games</button>
+            </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer">
+            <div class="logo-container-2">
+                <img src="images/Frame.png" alt="">
+                <h2 class="h2"><span class="span">G</span>amer</h2>
+            </div>
+            <div class="para-1">
+                <p>Our Story</p>
+                <p>Games</p>
+                <p>Web Games</p>
+                <p>Careers</p>
+                <p>Support</p>
+                <p>My Account</p>
+            </div>
+        </div>
     </footer>
 </body>
 
