--- a/index.html
+++ b/index.html
@@ -98,44 +98,18 @@
         </section>
         <section class="section-4">
            <div class="img-btn-2">
-            <div class="img-btn">
-                <img src="images/Rectangle 11.png" alt="">
-                <button class="btn-3"> Action Games</button>
-            </div>
-             <div class="img-btn">
-                <img src="images/Rectangle 12.png" alt="">
-                <button class="btn-3"> Adventure Games</button>
-             </div>
-            
-             <div class="img-btn">
-                <img src="images/Rectangle 13.png" alt="">
-                <button class="btn-3"> Arcade Games</button>
-             </div>
-             <div class="img-btn">
-                <img src="images/Rectangle 14.png" alt="">
-                <button class="btn-3"> Educational Games</button>
-             </div>
-             <div class="img-btn">
-                <img src="images/Rectangle 15.png" alt="">
-                <button class="btn-3"> Word Games</button>
-             </div>
+                <button> <img src="images/Rectangle 11.png" alt="">Action Games </button>
+                <button><img src="images/Rectangle 12.png" alt="">Adventure Games </button>
+                <button><img src="images/Rectangle 13.png" alt="">Arcade Games </button>
+                <button><img src="images/Rectangle 14.png"alt="">Educational Games</button>
+                <button><img src="images/Rectangle 15.png" alt="">Word Games </button>
            </div>
-             <div class="img-btn">
-                <img src="images/Rectangle 16.png" alt="">
-                <button class="btn-3">Role Palying Games</button>
-             </div>
-             <div class="img-btn">
-                <img src="images/Rectangle 17.png" alt="">
-                <button class="btn-3"> Music & Audio Games</button>
-             </div>
-             <div class="img-btn">
-                <img src="images/Rectangle 18.png" alt="">
-                <button class="btn-3"> Puzzle Games</button>
-             </div>
-            <div class="img-btn">
-                <img src="images/Rectangle 19.png" alt="">
-                <button class="btn-3"> Strategy Games</button>
-            </div>
+           <div class="img-btn-2">
+               <button><img src="images/Rectangle 16.png" alt="">Role Palying Games</button>
+               <button><img src="images/Rectangle 17.png" alt="">Music & Audio Games</button>
+               <button><img src="images/Rectangle 18.png" alt="">Puzzle Games</button>
+               <button><img src="images/Rectangle 19.png" alt="">Strategy Games</button>
+           </div>
         </section>
     </main>
     <footer>
@@ -151,6 +125,24 @@
                 <p>Careers</p>
                 <p>Support</p>
                 <p>My Account</p>
+            </div>
+            <div class="anchor-img">
+                <a href=""><img src="images/twitter 1.png" alt=""> </a>
+                <a href=""><img src="images/facebook 1.png" alt=""></a>
+                <a href=""><img src="images/Group 49.png" alt=""></a>
+                <a href=""><img src="images/linkedin 1.png" alt=""></a>
+                <a href=""><img src="images/instagram 1.png" alt=""></a>
+                <a href=""><img src="images/apple 1.png" alt=""></a>
+                
+            </div>
+            <div class="para-2">
+                <p>Terms and Conditions</p>
+                <p>Privacy Policy</p>
+                <p>Cookie Policy</p>
+                <p>Privacy Settings</p>
+            </div>
+            <div class="para-3">
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
             </div>
         </div>
     </footer>
