--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>gamer</title>
     <link rel="stylesheet" href="styles/gamer-style.css">
     <link rel="stylesheet" href="styles/media.css">
+    <link rel="icon" href="images/Frame.png" type="image/png">
 </head>
 
 <body>
