--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                  <div class="oo">
                         <img src="images/Rectangle 7.png" alt="">
                         <p>Breaking game records like OG</p>
+                        <div class="class="overlay"">
+                           <img src="images/play-button 1.png" alt="">
+                           <p class="overlay-text">Watch Now</p>
+                        </div>
+                        
                  </div>
                  <div class="oo">
                     <img src="images/Rectangle 6.png" alt="">
