added the overlay

--- a/index.html
+++ b/index.html
@@ -70,10 +70,22 @@
                 <div class="oo">
                     <img src="images/Rectangle 4.png" alt="">
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <div class="overlay">
+                        <div class="overlay-2">
+                            <img src="images/play-button 1.png" alt="">
+                            <p class="overlay-text">Watch Now</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="oo">
                     <img src="images/Rectangle 5.png" alt="">
                     <p>Did you score? #unblockedgames #school</p>
+                    <div class="overlay">
+                        <div class="overlay-2">
+                            <img src="images/play-button 1.png" alt="">
+                            <p class="overlay-text">Watch Now</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="oo">
                     <img src="images/Rectangle 7.png" alt="">
@@ -91,6 +103,12 @@
                 <div class="oo">
                     <img src="images/Rectangle 6.png" alt="">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
+                    <div class="overlay">
+                        <div class="overlay-2">
+                            <img src="images/play-button 1.png" alt="">
+                            <p class="overlay-text">Watch Now</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
