added the right size img

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <h2 class="all-heading">Online Games <span class="span-2">Funny Videos</span> </h2>
                 <p class="paragraph">A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
+         <div class="game-image-main">
             <div class="game-image">
                 <div class="oo">
                     <img src="images/Rectangle 4.png" alt="">
@@ -111,6 +112,7 @@
                     </div>
                 </div>
             </div>
+         </div>
         </section>
         <section class="section-3">
             <div class="online-game-div">
